@@ -6,6 +6,8 @@ TODO: openbsd requires stdint.h for intptr_t - why posix?
 TODO: make mtouch/readdir maybe others cancellable in-request
 TODO: fadvise request
 1.0
+	- fix a deadlock where a wakeup signal could be missed when
+          a timeout occured at the same time.
 	- use nonstandard but maybe-working-on-bsd fork technique.
         - fix a path-memory-leak in readdir when using the wrappers
           (reported by Thomas L. Shinnick).
